[gd_scene load_steps=6 format=2]

[ext_resource path="res://ConnectionBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://ChatBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://ChatScene.gd" type="Script" id=3]
[ext_resource path="res://UserList.tscn" type="PackedScene" id=4]
[ext_resource path="res://MsgBubble.tscn" type="PackedScene" id=5]

[node name="ChatScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 95.0
margin_top = -5.0
margin_right = -30.0
margin_bottom = -296.0
script = ExtResource( 3 )

[node name="ChatBox" parent="." instance=ExtResource( 2 )]
margin_left = 294.0
margin_top = 134.0
margin_right = 487.0
margin_bottom = 205.0

[node name="ConnectionBox" parent="." instance=ExtResource( 1 )]
anchor_right = 1.0
anchor_bottom = 0.928
margin_left = 7.0
margin_top = 22.0
margin_right = -535.0
margin_bottom = 48.744
rect_scale = Vector2( 0.830092, 0.884077 )

[node name="UserList" parent="." instance=ExtResource( 4 )]
position = Vector2( 544, -120 )

[node name="MsgBubble" parent="." instance=ExtResource( 5 )]
margin_left = 341.0
margin_top = 8.0
margin_right = 562.0
margin_bottom = 48.0
